{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "VR",
            "id": "b3022c17-3bcc-47e1-86ba-0ac1fed65a29",
            "actions": [
                {
                    "name": "Direction",
                    "type": "Value",
                    "id": "3b84fea9-4b2a-460a-914f-c206d86321f2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ShootR",
                    "type": "Button",
                    "id": "d56064ea-1f7b-4730-88ed-de2b0a4f8d40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootL",
                    "type": "Button",
                    "id": "1e185459-6ecf-4e28-a493-5949f492b522",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ascend",
                    "type": "Button",
                    "id": "0909d31c-178e-40e2-9513-517551ae7dc7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextDialog",
                    "type": "Button",
                    "id": "fba2e594-98d3-4469-b4fd-4d90b61b1767",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "b95fd376-6512-402e-b171-7154d14b0cf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripR",
                    "type": "Button",
                    "id": "ba0dfe1c-aae4-40d8-8147-7bfe0f4dd8d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a70bbb1a-192a-4046-bfe7-72518d0b941a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13101788-8498-4a6d-8633-a38c6783fefc",
                    "path": "<XRController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e26622b5-031c-4010-8529-cb0d1b4611f8",
                    "path": "<OculusTouchController>{RightHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad43c487-382a-4187-8a3b-a7cd22fce971",
                    "path": "<ViveController>{RightHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Direction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0680cf7e-c25f-4753-b830-0d3c9e4e6297",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a2bb638-d50d-406d-9f66-19ece84aac26",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67335f39-5350-4af8-b772-d95bbab17932",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "248cf1b0-deb2-4896-8a24-a594287f4945",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa0a3335-7625-433b-b6e3-bb0537ff8823",
                    "path": "<ViveController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "640887c8-8ccb-4a34-b698-5f0d746347dd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ae4be86-3199-4b86-8499-f1233740e1b7",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "215d63c6-5e6a-4d90-b70a-e88632476d04",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4fc3c27-eaab-4053-ab07-d132cba0d598",
                    "path": "<OculusTouchController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88c4b01e-268e-49a3-8396-1303c2a39b1d",
                    "path": "<ViveController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a61d088f-f8aa-4c22-8d5f-bd47152d3c64",
                    "path": "<XRController>{RightHand}/primary",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ascend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d499325f-0730-47bf-b0c8-8eb2c58a6cdc",
                    "path": "<OculusTouchController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ascend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be389e76-c8c5-4c13-b237-4b80999e660f",
                    "path": "<ViveController>{RightHand}/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ascend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56f93462-1183-4e45-8b1d-9615e74d1510",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ascend",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d907720d-36de-4b4c-a2dd-7a5801e7bb74",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2afa277d-6568-4d1b-8bcf-f92c52eda6bc",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54955810-c3c0-48e1-8fcd-d8b724b666ab",
                    "path": "<XRController>{RightHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cec7200-b65c-4a4a-84c8-e422b6c6a8fc",
                    "path": "<OculusTouchController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}